--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "jose": "^6.1.3",
     "js-cookie": "^3.0.5",
     "mysql2": "^3.6.2",
     "next": "13.5.4",
